# washco

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  compose.dev.yaml  compose.yaml  dev.sh
.github/workflows/: ci.yml
crates/modules/admin/: Cargo.toml
crates/modules/admin/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/admin/src/application/: ports.rs  services.rs
crates/modules/admin/src/domain/: entities.rs
crates/modules/admin/src/infra/: mod.rs  pg_admin_repo.rs
crates/modules/analytics/: Cargo.toml
crates/modules/analytics/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/analytics/src/application/: ports.rs  services.rs
crates/modules/analytics/src/domain/: entities.rs
crates/modules/analytics/src/infra/: mod.rs  pg_analytics_repo.rs
crates/modules/booking/: Cargo.toml
crates/modules/booking/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/booking/src/application/: ports.rs  services.rs
crates/modules/booking/src/domain/: entities.rs  errors.rs
crates/modules/booking/src/infra/: mod.rs  pg_booking_repo.rs
crates/modules/catalog/: Cargo.toml
crates/modules/catalog/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/catalog/src/application/: ports.rs  services.rs
crates/modules/catalog/src/domain/: entities.rs  errors.rs
crates/modules/catalog/src/infra/: mod.rs  pg_service_repo.rs
crates/modules/customer/: Cargo.toml
crates/modules/customer/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/customer/src/application/: ports.rs  services.rs
crates/modules/customer/src/domain/: entities.rs  errors.rs
crates/modules/customer/src/infra/: mod.rs  pg_customer_repo.rs
crates/modules/identity/: Cargo.toml
crates/modules/identity/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/identity/src/application/: ports.rs  services.rs
crates/modules/identity/src/domain/: entities.rs  errors.rs
crates/modules/identity/src/infra/: in_memory_otp.rs  mod.rs  pg_user_repo.rs
crates/modules/inventory/: Cargo.toml
crates/modules/inventory/src/: lib.rs
crates/modules/inventory/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/inventory/src/application/: ports.rs  services.rs
crates/modules/inventory/src/domain/: entities.rs  errors.rs
crates/modules/inventory/src/infra/: mod.rs  pg_inventory_repo.rs
crates/modules/location/: Cargo.toml
crates/modules/location/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/location/src/application/: ports.rs  services.rs
crates/modules/location/src/domain/: entities.rs  errors.rs
crates/modules/location/src/infra/: mod.rs  pg_location_repo.rs
crates/modules/notification/: Cargo.toml
crates/modules/notification/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/notification/src/application/: ports.rs  services.rs
crates/modules/notification/src/domain/: entities.rs  errors.rs
crates/modules/notification/src/infra/: mod.rs  pg_notification_repo.rs
crates/modules/payment/: Cargo.toml
crates/modules/payment/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/payment/src/application/: ports.rs  services.rs
crates/modules/payment/src/domain/: entities.rs  errors.rs  mod.rs
crates/modules/payment/src/infra/: mod.rs  pg_payment_repo.rs
crates/modules/pricing/: Cargo.toml
crates/modules/pricing/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/pricing/src/application/: ports.rs  services.rs
crates/modules/pricing/src/domain/: entities.rs  errors.rs
crates/modules/pricing/src/infra/: mod.rs  pg_pricing_repo.rs
crates/modules/promotion/: Cargo.toml
crates/modules/promotion/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/promotion/src/application/: ports.rs  services.rs
crates/modules/promotion/src/domain/: entities.rs  errors.rs
crates/modules/promotion/src/infra/: mod.rs  pg_promotion_repo.rs
crates/modules/queue/: Cargo.toml
crates/modules/queue/src/api/: dto.rs  handlers.rs  mod.rs  ws.rs
crates/modules/queue/src/application/: ports.rs  services.rs
crates/modules/queue/src/domain/: entities.rs  errors.rs
crates/modules/queue/src/infra/: mod.rs  pg_queue_repo.rs
crates/modules/review/: Cargo.toml
crates/modules/review/src/api/: dto.rs  handlers.rs  mod.rs
crates/modules/review/src/application/: mod.rs  ports.rs  services.rs
crates/modules/review/src/domain/: entities.rs  (+1 more)
crates/modules/staff/: Cargo.toml
crates/modules/weather/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  outbox.rs  router.rs  state.rs  uploads.rs
crates/server/tests/: api_test.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  error.rs  lib.rs  money.rs  pagination.rs
docs/: CP.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE3.md  architecture.md  database-erd.dbml  prd.md  ui-ux-spec.md
frontend/driver/: package.json  vite.config.ts
frontend/driver/src/: app.css  app.html
frontend/driver/src/lib/: auth.svelte.ts  favorites.svelte.ts  toast.svelte.ts
frontend/driver/src/routes/: +layout.svelte  +page.svelte
frontend/driver/static/: manifest.json  sw.js
frontend/driver/static/icons/: generate.sh
frontend/owner/: package.json  svelte.config.js  vite.config.ts
frontend/owner/src/: app.css  app.html
frontend/owner/src/lib/: auth.svelte.ts  location.svelte.ts
frontend/owner/src/routes/: +layout.svelte
infra/apisix/: apisix.dev.yaml  apisix.yaml  config.dev.yaml  config.yaml  dashboard.yaml
infra/podman/: Containerfile.api  Containerfile.driver  Containerfile.owner
infra/scripts/: backup-db.sh
migrations/: 20250101000000_initial.sql  20250102000000_phase2_modules.sql  20250103000000_s3_and_improvements.sql  20250104000000_operations_modules.sql  20250105000000_phase3_admin_analytics.sql
scripts/: seed.sh  seed.sql
(+65 files in other folders)
