[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/modules/identity",
    "crates/modules/location",
    "crates/modules/catalog",
    "crates/modules/queue",
    "crates/modules/analytics",
    "crates/modules/booking",
    "crates/modules/review",
    "crates/modules/notification",
    "crates/modules/pricing",
    "crates/modules/promotion",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"

# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Config
dotenvy = "0.15"

# S3/RustFS
aws-sdk-s3 = "1"
aws-config = "1"

# Redis/KeyDB
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
