[package]
name = "washco-server"
version.workspace = true
edition.workspace = true

[dependencies]
washco-shared = { path = "../shared" }
washco-identity = { path = "../modules/identity" }
washco-location = { path = "../modules/location" }
washco-catalog = { path = "../modules/catalog" }
washco-queue = { path = "../modules/queue" }
washco-analytics = { path = "../modules/analytics" }
washco-booking = { path = "../modules/booking" }
washco-review = { path = "../modules/review" }
washco-notification = { path = "../modules/notification" }
washco-pricing = { path = "../modules/pricing" }
washco-promotion = { path = "../modules/promotion" }
washco-payment = { path = "../modules/payment" }
washco-staff = { path = "../modules/staff" }
washco-customer = { path = "../modules/customer" }
washco-inventory = { path = "../modules/inventory" }

anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
