[package]
name = "washco-shared"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
